--- a/src/index.css
+++ b/src/index.css
@@ -47,10 +47,10 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
-  cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+button:not(:disabled):hover {
+  cursor: pointer;
   border-color: #646cff;
 }
 button:focus,
